--- a/.github/workflows/criptocurrency_update.yml
+++ b/.github/workflows/criptocurrency_update.yml
@@ -11,7 +11,10 @@ on:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
   push:
+  repository_dispatch:
+    types: invocacion_desde_curl	
 
+    
 jobs:
   autoscrape:
     # The type of runner that the job will run on
